--- a/P1/Makefile
+++ b/P1/Makefile
@@ -1,2 +1,7 @@
+SOURCES := $(wildcard *.base.html)
+GEN_HTML := $(patsubst %.base.html, %.html, $(SOURCES))
+
+all: $(GEN_HTML)
+
 %.html: header.html %.base.html footer.html
 	cat $^ > $@	
