--- a/P2/Makefile
+++ b/P2/Makefile
@@ -1,2 +1,10 @@
-%.html: base/header.html %.base.html base/footer.html
+SOURCES := $(wildcard base/*.base.html)
+GEN_HTML := $(patsubst base/%.base.html, %.html, $(SOURCES))
+
+all: $(GEN_HTML)
+
+style/%.xsl: base/%.base.xsl base/header.html base/footer.html
+	cat $< | sed -e "/HEADER/r base/header.html" -e "//d" | sed -e "/FOOTER/r base/footer.html" -e "//d" > $@ 
+
+%.html: base/header.html base/%.base.html base/footer.html
 	cat $^ > $@	
